Fixed multiple crashes that were hard to trigger Fixed About tab in the menu not showing translators